{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 26,
  "lineage": "9cea6e51-2809-4a80-9838-5fd7b441770c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "wp_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0b24aa202a0904750",
            "id": "rtb-0b24aa202a0904750",
            "owner_id": "622407708773",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "wp_private_rt"
            },
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "wp_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:622407708773:loadbalancer/wp-lb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "wp-lb-621060749.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "wp-lb",
            "idle_timeout": 400,
            "instances": [
              "i-0cbabe81ce62b251c",
              "i-0fa8b19660a08f6db"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "wp-lb",
            "security_groups": [
              "sg-0377ef7672e64766a"
            ],
            "source_security_group": "622407708773/Allow_public_traffic",
            "source_security_group_id": "sg-0377ef7672e64766a",
            "subnets": [
              "subnet-04b5c86e5601fd62e",
              "subnet-06fa53d6851601974"
            ],
            "tags": {
              "Name": "wp-lb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.wp_web",
            "aws_security_group.public_sg",
            "aws_subnet.wp_public1_subnet",
            "aws_subnet.wp_public2_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:622407708773:instance/i-0fa8b19660a08f6db",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0fa8b19660a08f6db",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wp_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed51287f3ab22653",
            "private_dns": "ip-10-0-1-219.ec2.internal",
            "private_ip": "10.0.1.219",
            "public_dns": "ec2-54-236-63-132.compute-1.amazonaws.com",
            "public_ip": "54.236.63.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00ff88c478dc41b4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b5c86e5601fd62e",
            "tags": {
              "Name": "Wordpress_web_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0377ef7672e64766a"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.wp_public1_subnet",
            "aws_vpc.wp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:622407708773:instance/i-0cbabe81ce62b251c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0cbabe81ce62b251c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wp_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-032a786db5818a143",
            "private_dns": "ip-10-0-1-58.ec2.internal",
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-3-231-50-171.compute-1.amazonaws.com",
            "public_ip": "3.231.50.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-070bc9bed405ccd6d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b5c86e5601fd62e",
            "tags": {
              "Name": "Wordpress_web_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0377ef7672e64766a"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.wp_public1_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-020df37ff6c3f688b",
            "owner_id": "622407708773",
            "tags": {
              "Name": "wp_igw"
            },
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06477cea47ce35a99",
            "owner_id": "622407708773",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020df37ff6c3f688b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp_public_rt"
            },
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_private1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec1bc9f8088f20b9",
            "route_table_id": "rtb-0b24aa202a0904750",
            "subnet_id": "subnet-02c7fb776f4309f0c"
          },
          "dependencies": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_private1_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_private2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d5505aa37242077",
            "route_table_id": "rtb-0b24aa202a0904750",
            "subnet_id": "subnet-026031fb3d6584164"
          },
          "dependencies": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_private2_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037d1efccef50ff86",
            "route_table_id": "rtb-06477cea47ce35a99",
            "subnet_id": "subnet-04b5c86e5601fd62e"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_public1_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065d6722862a5bb40",
            "route_table_id": "rtb-06477cea47ce35a99",
            "subnet_id": "subnet-06fa53d6851601974"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_public2_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622407708773:security-group/sg-0377ef7672e64766a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0377ef7672e64766a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow_public_traffic",
            "name_prefix": null,
            "owner_id": "622407708773",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_efs_security_grp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622407708773:security-group/sg-0f09092a8e50d39ff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0377ef7672e64766a"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f09092a8e50d39ff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0377ef7672e64766a"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "Allow_EFS",
            "name_prefix": null,
            "owner_id": "622407708773",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_rds_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622407708773:security-group/sg-02af50c464cd07bc3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02af50c464cd07bc3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0377ef7672e64766a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wp_rds_sg",
            "name_prefix": null,
            "owner_id": "622407708773",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622407708773:subnet/subnet-02c7fb776f4309f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-02c7fb776f4309f0c",
            "map_public_ip_on_launch": false,
            "owner_id": "622407708773",
            "tags": {
              "Name": "wp_private1"
            },
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622407708773:subnet/subnet-026031fb3d6584164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-026031fb3d6584164",
            "map_public_ip_on_launch": false,
            "owner_id": "622407708773",
            "tags": {
              "Name": "wp_private2"
            },
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622407708773:subnet/subnet-04b5c86e5601fd62e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04b5c86e5601fd62e",
            "map_public_ip_on_launch": true,
            "owner_id": "622407708773",
            "tags": {
              "Name": "wp_public1"
            },
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622407708773:subnet/subnet-06fa53d6851601974",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06fa53d6851601974",
            "map_public_ip_on_launch": true,
            "owner_id": "622407708773",
            "tags": {
              "Name": "wp_public2"
            },
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622407708773:subnet/subnet-0972549de48832266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0972549de48832266",
            "map_public_ip_on_launch": false,
            "owner_id": "622407708773",
            "tags": {
              "Name": "wp_rds1"
            },
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622407708773:subnet/subnet-040c029489d42ef52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-040c029489d42ef52",
            "map_public_ip_on_launch": false,
            "owner_id": "622407708773",
            "tags": {
              "Name": "wp_rds2"
            },
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds3_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622407708773:subnet/subnet-0455f5e2d1779adda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0455f5e2d1779adda",
            "map_public_ip_on_launch": false,
            "owner_id": "622407708773",
            "tags": {
              "Name": "wp_rds3"
            },
            "vpc_id": "vpc-05c277a863c3bcd46"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622407708773:vpc/vpc-05c277a863c3bcd46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0de6c874363976d7a",
            "default_route_table_id": "rtb-0b24aa202a0904750",
            "default_security_group_id": "sg-08d0557299ccc428d",
            "dhcp_options_id": "dopt-087f8e5e4234b9e31",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05c277a863c3bcd46",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b24aa202a0904750",
            "owner_id": "622407708773",
            "tags": {
              "Name": "wp_vpc"
            }
          }
        }
      ]
    }
  ]
}